[package]
name = "dtu"
version.workspace = true
edition = "2021"

[dependencies]
dtu_proc_macro = { path = "../dtu_proc_macro" }
thiserror = "1.0"
which = "7.0"
directories = "6.0"
diesel = { version = "2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"], optional = true }
diesel_migrations = { version = "2.0", optional = true }
tempfile = "3.19"
zip = { version = "4.3", default-features = false, features = ["deflate", "deflate64"] }
rayon = "1.10"
blanket = "0.2"
smalisa = { git = "https://github.com/ivision-research/smalisa.git", rev = "3fa60ea2c21af15c0cecfacca334858900ec9c77", default-features = false, optional = true }
csv = "1.3"
sha2 = { workspace = true }
walkdir = "2"
askama = { version = "0.12", optional = true }
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
lazy_static = { workspace = true }
itertools = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
crossbeam = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

once_cell = "1.21"

# Needed for Apex files :(
protobuf = "=3.5.1"
protobuf-json-mapping = "=3.5.1"

schemars = "1.2.1"

[target.'cfg(not(windows))'.dependencies]
libc = { workspace = true }

# We don't actually support windows but hey, let's pretend
[target.'cfg(windows)'.dependencies]
miow = "0.3.6"
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"] }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["graph", "sql"]
test = ["graph", "sql", "filestore", "app", "app-server", "decompile", "setup"]

sql = ["reexport_diesel", "dep:diesel", "dep:diesel_migrations"]

# Include the FileStore trait and some implementations
filestore = []

# Include testing application related features
app = ["dep:askama", "app-server"]

# Include the app server related functions
app-server = []

# Include the graph database
graph = ["sql", "reexport_smalisa"]

decompile = []

# Include setup tasks
setup = ["graph", "decompile", "dep:smalisa"]

reexport_smalisa = ["dep:smalisa"]
reexport_diesel = []
reexport_askama = []
# Trace database commands
trace_db = []
